Fix table style
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/_sass/p2pu-theme/_variables.scss
+++ b/_sass/p2pu-theme/_variables.scss
@@ -345,6 +345,10 @@ $hr-margin-y:                 $spacer !default;
 //
 // Customizes the `.table` component with basic values, each used across all table variations.
 
+table {
+  @extend .table;
+}
+
 $table-cell-padding:          .75rem !default;
 $table-cell-padding-sm:       .3rem !default;
 
