Update reading callouts
Make it more clear what is 154B vs 201A and color 201A correctly

Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/_includes/reading-grad.html
+++ b/_includes/reading-grad.html
@@ -2,9 +2,9 @@
 <div class="reading-grad">
 
 {% if include.optional %}
-<h3> *Optional* Reading </h3>
+<h3> *Optional* Reading (201A) </h3>
 {% else %}
-<h3> Reading </h3>
+<h3> Reading (201A) </h3>
 {% endif %}
 
 <p>
