--- a/_includes/reading.html
+++ b/_includes/reading.html
@@ -2,9 +2,9 @@
 <div class="reading">
 
 {% if include.optional %}
-<h3> *Optional* Reading </h3>
+<h3> *Optional* Reading  (154B) </h3>
 {% else %}
-<h3> Reading </h3>
+<h3> Reading (154B) </h3>
 {% endif %}
 
 <p>
