--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
             <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
                 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" />
             </a>
-                Copyright 2020 Jason Lowe-Power
+                Copyright 2020-2023 Jason Lowe-Power
                 <br />
                 This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
                     Creative Commons Attribution 4.0 International License
